--- a/NJ/NJ01/index.html
+++ b/NJ/NJ01/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>How Javascript Works</h1>
+  </head>
+  <body>
+    <h1 style="font-family: sans-serif; font-size: 20px;">=> How Javascript Works & Execution Context</h1>
+    <h1 style="font-family: sans-serif; font-size: 20px;">
+      => Javascript is a synchronous(in a specific order) single threaded
+      language(is executes only one command at time).
+    </h1>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
