--- a/NJ/NJ10/index.html
+++ b/NJ/NJ10/index.html
@@ -9,6 +9,16 @@
     <h1 style="font-family: sans-serif; font-size: 20px">
       🔥 setTimeout + Closures Interview Question
     </h1>
+    <h2 style="font-family: sans-serif; font-size: 20px">
+      This question will strengthen your knowledge and understanding of Closures
+      and will also help you in your frontend/full stack/ web development
+      interview. We will start with an easy JS question and slowly move to the
+      hard and tricky interview question. If you are giving web developer
+      interviews actively, there are high chances that you might find this
+      question in your frotend developer interview. Candidates have faced this
+      question in their interviews for Amazon, Facebook, Paypal, Microsoft and
+      many other big tech firms.
+    </h2>
 
     <script src="script.js"></script>
   </body>
